hidden mobile image on desktop

--- a/index.html
+++ b/index.html
@@ -383,14 +383,14 @@
     </section>
 
     <!-- Footer -->
-    <img class="w-full h-full" src="./assets/images/footer-img-mobile.png" alt="" />
+    <!-- mobile img -->
+    <img class="w-full h-full block lg:hidden" src="./assets/images/footer-img-mobile.png" alt="" />
     <footer class="bg-light-azov/20 lg:mt-[500px] h-[500px] lg:h-[1100px] pb-16">
       <div class="relative noviks-container container flex flex-col items-center gap-24">
         <!-- desktop img -->
         <div class="hidden lg:block absolute lg:-top-96">
           <img class="w-full h-full" src="./assets/images/footer-img.png" alt="" />
         </div>
-        <!-- mobile img -->
 
         <p
           class="text-center text-[23px] lg:section-subtitle font-bold lg:pt-[500px] lg:max-w-[380px] max-lg:pt-[50px]">
